--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@adonisjs/lucid": "^6.1.3",
     "mysql": "^2.16.0",
     "mysql2": "^1.6.5",
-    "url-parse": "^1.4.4"
+    "url-parse": "^1.4.4",
+    "axios": "^0.18.0"
   },
   "devDependencies": {},
   "autoload": {
