--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "test": "node ace test"
+    "test": "node ace test",
+    "dev": "nodemon server.js"
   },
   "keywords": [
     "adonisjs",
@@ -24,12 +25,14 @@
     "@adonisjs/framework": "^5.0.9",
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
+    "axios": "^0.18.0",
     "mysql": "^2.16.0",
     "mysql2": "^1.6.5",
-    "url-parse": "^1.4.4",
-    "axios": "^0.18.0"
+    "url-parse": "^1.4.4"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^1.19.0"
+  },
   "autoload": {
     "App": "./app"
   }
