--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@adonisjs/framework": "^5.0.9",
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
+    "africastalking": "^0.4.0",
     "axios": "^0.18.0",
     "mysql": "^2.16.0",
     "mysql2": "^1.6.5",
